cambio en el enlace de Contactos en el archivo index.html y cambio en el archivo.css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <ul>
                     <li><a href="pages/portfolio.html">Productos</a></li>
                     <li><a href="pages/presupuesto.html">Presupuesto</a></li>
-                    <li><a hre="pages/contacto.html">Contacto</a></li>
+                    <li><a href="pages/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
@@ -60,19 +60,19 @@
                 </div>
 
                 <div class="gallery__item gallery__item--2">
-                    <img class="gallery__img" src="assets/images/Conjunto_hombre/pijama_hombre.jpg" alt="Pijama para hombre - Creaciones Luz">
+                    <img class="gallery__img" src="assets/images/Conjunto_hombre/pijama_hombre.jpg" alt="Pijama para hombre - Creaciones Luz" width="400px" height="300px"/>
                 </div>
 
                 <div class="gallery__item gallery__item--3">
-                    <img class="gallery__img" src="assets/images/Conjunto_nino/pijama_nino.jpg" alt="Pijama para niño - Creaciones Luz">
+                    <img class="gallery__img" src="assets/images/Conjunto_nino/pijama_nino.jpg" alt="Pijama para niño - Creaciones Luz" width="400px" height="300px"/>
                 </div>
 
                 <div class="gallery__item gallery__item--4">
-                    <img class="gallery__img" src="assets/images/Conjunto_nina/pijama_nina.jpg" alt="Pijama para niña - Creaciones Luz">
+                    <img class="gallery__img" src="assets/images/Conjunto_nina/pijama_nina.jpg" alt="Pijama para niña - Creaciones Luz" width="400px" height="300px"/>
                 </div>
 
                 <div class="gallery__item gallery__item--5">
-                    <img class="gallery__img" src="assets/images/Conjunto_familia/pijama_conjunto.jpg" alt="Conjunto familiar de pijamas - Creaciones Luz">
+                    <img class="gallery__img" src="assets/images/Conjunto_familia/pijama_conjunto.jpg" alt="Conjunto familiar de pijamas - Creaciones Luz" width="400px" height="300px"/>
                 </div>
 
                 <!-- Miniaturas centralizadas -->
