--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,7 +48,7 @@
         <main class="contacto-container">
             <section class="contacto-info">
             <!-- Sección: Información de contacto -->
-                <h1>Contacto</h1>    
+                <h2>Contacto</h2>    
                 <p>Estamos listos para ayudarte. Puedes comunicarte con nosotros mediante:</p>
                 <address>
                     <ul>
@@ -61,10 +61,12 @@
 
             <!-- Sección: Mapa / ubicación -->
             <section class="contacto-mapa">
-                <h2>Ubicación de la empresa</h2>
+                <h3>Ubicación de la empresa</h3>
 
                 <!--Iframe: ubicación en mapa (Google Maps iframe)-->
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d744.0521869697332!2d-1.8662410929142128!3d39.002865926031085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd665fb217acaa95%3A0x9ac291948606e5fd!2sC.%20la%20Roda%2C%2049%2C%2002006%20Albacete!5e1!3m2!1ses!2ses!4v1762659321486!5m2!1ses!2ses"
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1489.7144446243449!2d-1.866705!3d39.002905!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd665fb217acaa95%3A0x9ac291948606e5fd!2sC.%20la%20Roda%2C%2049%2C%2002006%20Albacete!5e1!3m2!1ses!2ses!4v1762808559122!5m2!1ses!2ses" 
+                width="600" 
+                height="450" 
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy" 
@@ -84,19 +86,19 @@
                 <!--Redes sociales y Contacto-->
                 <div class="social-links">
                     <a href="#" aria-label="Facebook de Creaciones Luz" title="Facebook">
-                        <img src="../assets/icons/facebook.png" alt="Facebook"> Facebook
+                        <img src="../assets/icons/facebook.png" alt="Facebook" width="512" height="512" /> Facebook
                     </a>
                     <a href="#" aria-label="Instagram de Creaciones Luz" title="Instagram">
-                        <img src="../assets/icons/instagram.png" alt="Instagram"> Instagram
+                        <img src="../assets/icons/instagram.png" alt="Instagram" width="512" height="512" /> Instagram
                     </a>
                     <a href="#" aria-label="Whatsapp de Creaciones Luz" title="Whatsapp">
-                        <img src="../assets/icons/whatsapp.png" alt="whatsapp"> WhatsApp
+                        <img src="../assets/icons/whatsapp.png" alt="whatsapp" width="512" height="512" /> WhatsApp
                     </a>
                     <a href="#" aria-label="Teléfono de Creaciones Luz" title="telefono">
-                        <img src="../assets/icons/telefono.png" alt="telefono">+34 642 698 457
+                        <img src="../assets/icons/telefono.png" alt="telefono" width="512" height="512" />+34 642 698 457
                     </a>
                     <a href="#" aria-label="Email de Creaciones Luz" title="email">
-                        <img src="../assets/icons/email.png" alt="email"> info@creacionesluz.com
+                        <img src="../assets/icons/email.png" alt="email" width="512" height="512" /> info@creacionesluz.com
                     </a>
                 </div>
             </div>
