--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -55,76 +55,76 @@
                     <!-- Sub-sección: Productos para niños (.grid-nino) -->
                     <h2>Productos para niños</h2>
                     <div class="grid">
-                        <img src="../assets/images/Conjunto_nino/nino1.jpg" alt="Galería de imagenes de pijamas para niños">
-                        <img src="../assets/images/Conjunto_nino/nino2.jpg" alt="Galería de imagenes de pijamas para niños">
-                        <img src="../assets/images/Conjunto_nino/nino3.jpg" alt="Galería de imagenes de pijamas para niños">
-                        <img src="../assets/images/Conjunto_nino/nino4.jpg" alt="Galería de imagenes de pijamas para niños">
-                        <img src="../assets/images/Conjunto_nino/nino5.jpg" alt="Galería de imagenes de pijamas para niños">
-                        <img src="../assets/images/Conjunto_nino/nino6.jpg" alt="Galería de imagenes de pijamas para niños">
-                        <img src="../assets/images/Conjunto_nino/nino7.jpg" alt="Galería de imagenes de pijamas para niños">
-                        <img src="../assets/images/Conjunto_nino/nino8.jpg" alt="Galería de imagenes de pijamas para niños">
-                        <img src="../assets/images/Conjunto_nino/nino9.jpg" alt="Galería de imagenes de pijamas para niños">
-                        <img src="../assets/images/Conjunto_nino/nino10.jpg" alt="Galería de imagenes de pijamas para niños">
+                        <img src="../assets/images/Conjunto_nino/nino1.jpg" alt="Galería de imagenes de pijamas para niños" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nino/nino2.jpg" alt="Galería de imagenes de pijamas para niños" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nino/nino3.jpg" alt="Galería de imagenes de pijamas para niños" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nino/nino4.jpg" alt="Galería de imagenes de pijamas para niños" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nino/nino5.jpg" alt="Galería de imagenes de pijamas para niños" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nino/nino6.jpg" alt="Galería de imagenes de pijamas para niños" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nino/nino7.jpg" alt="Galería de imagenes de pijamas para niños" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nino/nino8.jpg" alt="Galería de imagenes de pijamas para niños" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nino/nino9.jpg" alt="Galería de imagenes de pijamas para niños" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nino/nino10.jpg" alt="Galería de imagenes de pijamas para niños" width="736" height="960" />
                     </div>
                     <hr>
                     <!-- Sub-sección: Productos para niñas (.grid-nina) -->
                     <h2>Productos para niñas</h2>
                     <div class="grid">
-                        <img src="../assets/images/Conjunto_nina/nina1.jpg" alt="Galería de imagenes de pijamas para niñas">
-                        <img src="../assets/images/Conjunto_nina/nina2.jpg" alt="Galería de imagenes de pijamas para niñas">
-                        <img src="../assets/images/Conjunto_nina/nina3.jpg" alt="Galería de imagenes de pijamas para niñas">
-                        <img src="../assets/images/Conjunto_nina/nina4.jpg" alt="Galería de imagenes de pijamas para niñas">
-                        <img src="../assets/images/Conjunto_nina/nina5.jpg" alt="Galería de imagenes de pijamas para niñas">
-                        <img src="../assets/images/Conjunto_nina/nina6.jpg" alt="Galería de imagenes de pijamas para niñas">
-                        <img src="../assets/images/Conjunto_nina/nina7.jpg" alt="Galería de imagenes de pijamas para niñas">
-                        <img src="../assets/images/Conjunto_nina/nina8.jpg" alt="Galería de imagenes de pijamas para niñas">
-                        <img src="../assets/images/Conjunto_nina/nina9.jpg" alt="Galería de imagenes de pijamas para niñas">
-                        <img src="../assets/images/Conjunto_nina/nina10.jpg" alt="Galería de imagenes de pijamas para niñas">
+                        <img src="../assets/images/Conjunto_nina/nina1.jpg" alt="Galería de imagenes de pijamas para niñas" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nina/nina2.jpg" alt="Galería de imagenes de pijamas para niñas" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nina/nina3.jpg" alt="Galería de imagenes de pijamas para niñas" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nina/nina4.jpg" alt="Galería de imagenes de pijamas para niñas" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nina/nina5.jpg" alt="Galería de imagenes de pijamas para niñas" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nina/nina6.jpg" alt="Galería de imagenes de pijamas para niñas" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nina/nina7.jpg" alt="Galería de imagenes de pijamas para niñas" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nina/nina8.jpg" alt="Galería de imagenes de pijamas para niñas" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nina/nina9.jpg" alt="Galería de imagenes de pijamas para niñas" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_nina/nina10.jpg" alt="Galería de imagenes de pijamas para niñas" width="736" height="960" />
                     </div>
                     <hr>
                     <!-- Sub-sección: Productos para mujer (.grid-mujer) -->
                     <h2>Productos para mujer</h2>
                     <div class="grid">
-                        <img src="../assets/images/Conjunto_mujer/mujer1.jpg" alt="Galería de imagenes de pijamas para mujeres ">
-                        <img src="../assets/images/Conjunto_mujer/mujer2.jpg" alt="Galería de imagenes de pijamas para mujeres ">
-                        <img src="../assets/images/Conjunto_mujer/mujer3.jpg" alt="Galería de imagenes de pijamas para mujeres ">
-                        <img src="../assets/images/Conjunto_mujer/mujer4.jpg" alt="Galería de imagenes de pijamas para mujeres ">
-                        <img src="../assets/images/Conjunto_mujer/mujer5.jpg" alt="Galería de imagenes de pijamas para mujeres ">
-                        <img src="../assets/images/Conjunto_mujer/mujer6.jpg" alt="Galería de imagenes de pijamas para mujeres ">
-                        <img src="../assets/images/Conjunto_mujer/mujer7.jpg" alt="Galería de imagenes de pijamas para mujeres ">
-                        <img src="../assets/images/Conjunto_mujer/mujer8.jpg" alt="Galería de imagenes de pijamas para mujeres ">
-                        <img src="../assets/images/Conjunto_mujer/mujer9.jpg" alt="Galería de imagenes de pijamas para mujeres ">
-                        <img src="../assets/images/Conjunto_mujer/mujer10.jpg" alt="Galería de imagenes de pijamas para mujeres">
+                        <img src="../assets/images/Conjunto_mujer/mujer1.jpg" alt="Galería de imagenes de pijamas para mujeres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_mujer/mujer2.jpg" alt="Galería de imagenes de pijamas para mujeres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_mujer/mujer3.jpg" alt="Galería de imagenes de pijamas para mujeres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_mujer/mujer4.jpg" alt="Galería de imagenes de pijamas para mujeres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_mujer/mujer5.jpg" alt="Galería de imagenes de pijamas para mujeres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_mujer/mujer6.jpg" alt="Galería de imagenes de pijamas para mujeres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_mujer/mujer7.jpg" alt="Galería de imagenes de pijamas para mujeres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_mujer/mujer8.jpg" alt="Galería de imagenes de pijamas para mujeres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_mujer/mujer9.jpg" alt="Galería de imagenes de pijamas para mujeres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_mujer/mujer10.jpg" alt="Galería de imagenes de pijamas para mujeres" width="736" height="960" />
                     </div>
                     <hr>
                     <!-- Sub-sección: Productos para hombre (.grid-hombre) -->
                     <h2>Productos para hombre</h2>
                     <div class="grid">
-                        <img src="../assets/images/Conjunto_hombre/hombre1.jpg" alt="Galería de imagenes de pijamas para hombres ">
-                        <img src="../assets/images/Conjunto_hombre/hombre2.jpg" alt="Galería de imagenes de pijamas para hombres ">
-                        <img src="../assets/images/Conjunto_hombre/hombre3.jpg" alt="Galería de imagenes de pijamas para hombres ">
-                        <img src="../assets/images/Conjunto_hombre/hombre4.jpg" alt="Galería de imagenes de pijamas para hombres ">
-                        <img src="../assets/images/Conjunto_hombre/hombre5.jpg" alt="Galería de imagenes de pijamas para hombres ">
-                        <img src="../assets/images/Conjunto_hombre/hombre6.jpg" alt="Galería de imagenes de pijamas para hombres ">
-                        <img src="../assets/images/Conjunto_hombre/hombre7.jpg" alt="Galería de imagenes de pijamas para hombres ">
-                        <img src="../assets/images/Conjunto_hombre/hombre8.jpg" alt="Galería de imagenes de pijamas para hombres ">
-                        <img src="../assets/images/Conjunto_hombre/hombre9.jpg" alt="Galería de imagenes de pijamas para hombres ">
-                        <img src="../assets/images/Conjunto_hombre/hombre10.jpg" alt="Galería de imagenes de pijamas para hombres ">
+                        <img src="../assets/images/Conjunto_hombre/hombre1.jpg" alt="Galería de imagenes de pijamas para hombres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_hombre/hombre2.jpg" alt="Galería de imagenes de pijamas para hombres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_hombre/hombre3.jpg" alt="Galería de imagenes de pijamas para hombres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_hombre/hombre4.jpg" alt="Galería de imagenes de pijamas para hombres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_hombre/hombre5.jpg" alt="Galería de imagenes de pijamas para hombres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_hombre/hombre6.jpg" alt="Galería de imagenes de pijamas para hombres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_hombre/hombre7.jpg" alt="Galería de imagenes de pijamas para hombres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_hombre/hombre8.jpg" alt="Galería de imagenes de pijamas para hombres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_hombre/hombre9.jpg" alt="Galería de imagenes de pijamas para hombres " width="736" height="960" />
+                        <img src="../assets/images/Conjunto_hombre/hombre10.jpg" alt="Galería de imagenes de pijamas para hombres " width="736" height="960" />
                     </div>
                     <hr>
                     <!-- Sub-sección: Conjuntos familiares (.grid-conjunto) -->
                     <h2>Conjuntos familiares</h2>
                     <div class="grid">
-                        <img src="../assets/images/Conjunto_familia/familia1.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar">
-                        <img src="../assets/images/Conjunto_familia/familia2.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar">
-                        <img src="../assets/images/Conjunto_familia/familia3.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar">
-                        <img src="../assets/images/Conjunto_familia/familia4.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar">
-                        <img src="../assets/images/Conjunto_familia/familia5.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar">
-                        <img src="../assets/images/Conjunto_familia/familia6.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar">
-                        <img src="../assets/images/Conjunto_familia/familia7.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar">
-                        <img src="../assets/images/Conjunto_familia/familia8.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar">
-                        <img src="../assets/images/Conjunto_familia/familia9.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar">
-                        <img src="../assets/images/Conjunto_familia/familia10.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar">
+                        <img src="../assets/images/Conjunto_familia/familia1.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_familia/familia2.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_familia/familia3.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_familia/familia4.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_familia/familia5.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_familia/familia6.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_familia/familia7.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_familia/familia8.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_familia/familia9.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar" width="736" height="960" />
+                        <img src="../assets/images/Conjunto_familia/familia10.jpg" alt="Galeria de imagenes de pijamas para conjunto familiar" width="736" height="960" />
                     </div>
                 </div>
             </section>
@@ -142,19 +142,19 @@
                 <!--Redes sociales y Contacto-->
                 <div class="social-links">
                     <a href="#" aria-label="Facebook de Creaciones Luz" title="Facebook">
-                        <img src="../assets/icons/facebook.png" alt="Facebook"> Facebook
+                        <img src="../assets/icons/facebook.png" alt="Facebook" width="512" height="512" /> Facebook
                     </a>
                     <a href="#" aria-label="Instagram de Creaciones Luz" title="Instagram">
-                        <img src="../assets/icons/instagram.png" alt="Instagram"> Instagram
+                        <img src="../assets/icons/instagram.png" alt="Instagram" width="512" height="512" /> Instagram
                     </a>
                     <a href="#" aria-label="Whatsapp de Creaciones Luz" title="Whatsapp">
-                        <img src="../assets/icons/whatsapp.png" alt="whatsapp"> WhatsApp
+                        <img src="../assets/icons/whatsapp.png" alt="whatsapp" width="512" height="512" /> WhatsApp
                     </a>
                     <a href="#" aria-label="Teléfono de Creaciones Luz" title="telefono">
-                        <img src="../assets/icons/telefono.png" alt="telefono">+34 642 698 457
+                        <img src="../assets/icons/telefono.png" alt="telefono" width="512" height="512" />+34 642 698 457
                     </a>
                     <a href="#" aria-label="Email de Creaciones Luz" title="email">
-                        <img src="../assets/icons/email.png" alt="email"> info@creacionesluz.com
+                        <img src="../assets/icons/email.png" alt="email" width="512" height="512" /> info@creacionesluz.com
                     </a>
                 </div>
             </div>
