solución de errores en los archivos HTML en w3.validador

--- a/index.html
+++ b/index.html
@@ -60,37 +60,37 @@
                 </div>
 
                 <div class="gallery__item gallery__item--2">
-                    <img class="gallery__img" src="assets/images/Conjunto_hombre/pijama_hombre.jpg" alt="Pijama para hombre - Creaciones Luz" width="400px" height="300px"/>
+                    <img class="gallery__img" src="assets/images/Conjunto_hombre/pijama_hombre.jpg" alt="Pijama para hombre - Creaciones Luz" width="400" height="300"/>
                 </div>
 
                 <div class="gallery__item gallery__item--3">
-                    <img class="gallery__img" src="assets/images/Conjunto_nino/pijama_nino.jpg" alt="Pijama para niño - Creaciones Luz" width="400px" height="300px"/>
+                    <img class="gallery__img" src="assets/images/Conjunto_nino/pijama_nino.jpg" alt="Pijama para niño - Creaciones Luz" width="400" height="300"/>
                 </div>
 
                 <div class="gallery__item gallery__item--4">
-                    <img class="gallery__img" src="assets/images/Conjunto_nina/pijama_nina.jpg" alt="Pijama para niña - Creaciones Luz" width="400px" height="300px"/>
+                    <img class="gallery__img" src="assets/images/Conjunto_nina/pijama_nina.jpg" alt="Pijama para niña - Creaciones Luz" width="400" height="300"/>
                 </div>
 
                 <div class="gallery__item gallery__item--5">
-                    <img class="gallery__img" src="assets/images/Conjunto_familia/pijama_conjunto.jpg" alt="Conjunto familiar de pijamas - Creaciones Luz" width="400px" height="300px"/>
+                    <img class="gallery__img" src="assets/images/Conjunto_familia/pijama_conjunto.jpg" alt="Conjunto familiar de pijamas - Creaciones Luz" width="400" height="300"/>
                 </div>
 
                 <!-- Miniaturas centralizadas -->
                 <div class="gallery__thumbs">
                     <label class="gallery__thumb" for="img-1">
-                        <img src="assets/images/Conjunto_mujer/pijama_mujer.jpg" alt="Miniatura pijama mujer" width="100px" height="75px" />
+                        <img src="assets/images/Conjunto_mujer/pijama_mujer.jpg" alt="Miniatura pijama mujer" width="100" height="75" />
                     </label>
                     <label class="gallery__thumb" for="img-2">
-                        <img src="assets/images/Conjunto_hombre/pijama_hombre.jpg" alt="Miniatura pijama hombre" width="100px" height="75px" />
+                        <img src="assets/images/Conjunto_hombre/pijama_hombre.jpg" alt="Miniatura pijama hombre" width="100" height="75" />
                     </label>
                     <label class="gallery__thumb" for="img-3">
-                        <img src="assets/images/Conjunto_nino/pijama_nino.jpg" alt="Miniatura pijama niño" width="100px" height="75px" />
+                        <img src="assets/images/Conjunto_nino/pijama_nino.jpg" alt="Miniatura pijama niño" width="100" height="75" />
                     </label>
                     <label class="gallery__thumb" for="img-4">
-                        <img src="assets/images/Conjunto_nina/pijama_nina.jpg" alt="Miniatura pijama niña" width="100px" height="75px" />
+                        <img src="assets/images/Conjunto_nina/pijama_nina.jpg" alt="Miniatura pijama niña" width="100" height="75" />
                     </label>
                     <label class="gallery__thumb" for="img-5">
-                        <img src="assets/images/Conjunto_familia/pijama_conjunto.jpg" alt="Miniatura conjunto pijamas" width="100px" height="75px" />
+                        <img src="assets/images/Conjunto_familia/pijama_conjunto.jpg" alt="Miniatura conjunto pijamas" width="100" height="75" />
                     </label>
                 </div>
             </div>
