Actualización de las etiquetas de imagen donde se elimino (/) al final de la etiqueta

--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -95,19 +95,19 @@
                 <!--Redes sociales y Contacto-->
                 <div class="social-links">
                     <a href="#" aria-label="Facebook de Creaciones Luz" title="Facebook">
-                        <img src="../assets/icons/facebook.png" alt="Facebook" width="512" height="512" /> Facebook
+                        <img src="../assets/icons/facebook.png" alt="Facebook" width="512" height="512"> Facebook
                     </a>
                     <a href="#" aria-label="Instagram de Creaciones Luz" title="Instagram">
-                        <img src="../assets/icons/instagram.png" alt="Instagram" width="512" height="512" /> Instagram
+                        <img src="../assets/icons/instagram.png" alt="Instagram" width="512" height="512"> Instagram
                     </a>
                     <a href="#" aria-label="Whatsapp de Creaciones Luz" title="Whatsapp">
-                        <img src="../assets/icons/whatsapp.png" alt="whatsapp" width="512" height="512" /> WhatsApp
+                        <img src="../assets/icons/whatsapp.png" alt="whatsapp" width="512" height="512"> WhatsApp
                     </a>
                     <a href="#" aria-label="Teléfono de Creaciones Luz" title="telefono">
-                        <img src="../assets/icons/telefono.png" alt="telefono" width="512" height="512" />+34 642 698 457
+                        <img src="../assets/icons/telefono.png" alt="telefono" width="512" height="512">+34 642 698 457
                     </a>
                     <a href="#" aria-label="Email de Creaciones Luz" title="email">
-                        <img src="../assets/icons/email.png" alt="email" width="512" height="512" /> info@creacionesluz.com
+                        <img src="../assets/icons/email.png" alt="email" width="512" height="512"> info@creacionesluz.com
                     </a>
                 </div>
             </div>
