--- a/index.html
+++ b/index.html
@@ -60,37 +60,37 @@
                 </div>
 
                 <div class="gallery__item gallery__item--2">
-                    <img class="gallery__img" src="assets/images/Conjunto_hombre/pijama_hombre.jpg" alt="Pijama para hombre - Creaciones Luz" width="400" height="300"/>
+                    <img class="gallery__img" src="assets/images/Conjunto_hombre/pijama_hombre.jpg" alt="Pijama para hombre - Creaciones Luz" width="400" height="300">
                 </div>
 
                 <div class="gallery__item gallery__item--3">
-                    <img class="gallery__img" src="assets/images/Conjunto_nino/pijama_nino.jpg" alt="Pijama para niño - Creaciones Luz" width="400" height="300"/>
+                    <img class="gallery__img" src="assets/images/Conjunto_nino/pijama_nino.jpg" alt="Pijama para niño - Creaciones Luz" width="400" height="300">
                 </div>
 
                 <div class="gallery__item gallery__item--4">
-                    <img class="gallery__img" src="assets/images/Conjunto_nina/pijama_nina.jpg" alt="Pijama para niña - Creaciones Luz" width="400" height="300"/>
+                    <img class="gallery__img" src="assets/images/Conjunto_nina/pijama_nina.jpg" alt="Pijama para niña - Creaciones Luz" width="400" height="300">
                 </div>
 
                 <div class="gallery__item gallery__item--5">
-                    <img class="gallery__img" src="assets/images/Conjunto_familia/pijama_conjunto.jpg" alt="Conjunto familiar de pijamas - Creaciones Luz" width="400" height="300"/>
+                    <img class="gallery__img" src="assets/images/Conjunto_familia/pijama_conjunto.jpg" alt="Conjunto familiar de pijamas - Creaciones Luz" width="400" height="300">
                 </div>
 
                 <!-- Miniaturas centralizadas -->
                 <div class="gallery__thumbs">
                     <label class="gallery__thumb" for="img-1">
-                        <img src="assets/images/Conjunto_mujer/pijama_mujer.jpg" alt="Miniatura pijama mujer" width="100" height="75" />
+                        <img src="assets/images/Conjunto_mujer/pijama_mujer.jpg" alt="Miniatura pijama mujer" width="100" height="75">
                     </label>
                     <label class="gallery__thumb" for="img-2">
-                        <img src="assets/images/Conjunto_hombre/pijama_hombre.jpg" alt="Miniatura pijama hombre" width="100" height="75" />
+                        <img src="assets/images/Conjunto_hombre/pijama_hombre.jpg" alt="Miniatura pijama hombre" width="100" height="75">
                     </label>
                     <label class="gallery__thumb" for="img-3">
-                        <img src="assets/images/Conjunto_nino/pijama_nino.jpg" alt="Miniatura pijama niño" width="100" height="75" />
+                        <img src="assets/images/Conjunto_nino/pijama_nino.jpg" alt="Miniatura pijama niño" width="100" height="75">
                     </label>
                     <label class="gallery__thumb" for="img-4">
-                        <img src="assets/images/Conjunto_nina/pijama_nina.jpg" alt="Miniatura pijama niña" width="100" height="75" />
+                        <img src="assets/images/Conjunto_nina/pijama_nina.jpg" alt="Miniatura pijama niña" width="100" height="75">
                     </label>
                     <label class="gallery__thumb" for="img-5">
-                        <img src="assets/images/Conjunto_familia/pijama_conjunto.jpg" alt="Miniatura conjunto pijamas" width="100" height="75" />
+                        <img src="assets/images/Conjunto_familia/pijama_conjunto.jpg" alt="Miniatura conjunto pijamas" width="100" height="75">
                     </label>
                 </div>
             </div>
@@ -109,19 +109,19 @@
                 <!--Redes sociales y Contacto-->
                 <div class="social-links">
                     <a href="#" aria-label="Facebook de Creaciones Luz" title="Facebook">
-                        <img src="assets/icons/facebook.png" alt="Facebook" width="512" height="512" /> Facebook
+                        <img src="assets/icons/facebook.png" alt="Facebook" width="512" height="512"> Facebook
                     </a>
                     <a href="#" aria-label="Instagram de Creaciones Luz" title="Instagram">
-                        <img src="assets/icons/instagram.png" alt="Instagram" width="512" height="512" /> Instagram
+                        <img src="assets/icons/instagram.png" alt="Instagram" width="512" height="512"> Instagram
                     </a>
                     <a href="#" aria-label="Whatsapp de Creaciones Luz" title="Whatsapp">
-                        <img src="assets/icons/whatsapp.png" alt="whatsapp" width="512" height="512" /> WhatsApp
+                        <img src="assets/icons/whatsapp.png" alt="whatsapp" width="512" height="512"> WhatsApp
                     </a>
                     <a href="#" aria-label="Teléfono de Creaciones Luz" title="telefono">
-                        <img src="assets/icons/telefono.png" alt="telefono" width="512" height="512" />+34 642 698 457
+                        <img src="assets/icons/telefono.png" alt="telefono" width="512" height="512">+34 642 698 457
                     </a>
                     <a href="#" aria-label="Email de Creaciones Luz" title="email">
-                        <img src="assets/icons/email.png" alt="email" width="512" height="512" /> info@creacionesluz.com
+                        <img src="assets/icons/email.png" alt="email" width="512" height="512"> info@creacionesluz.com
                     </a>
                 </div>
             </div>
